--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,7 @@
     <div id="root"></div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="scripts.js"></script>
   </body>
 </html>
